Complete portfolio website with profile, skills, experience, projects, and contact sections

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyPortfolio</title>
+  <title>MB Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Madhan Sainath Reddy Bommidi - Full-Stack Developer specializing in Angular, React, .NET Core, and Azure. Building scalable, high-performance web applications.">
+  <meta name="keywords" content="Full Stack Developer, Angular Developer, React Developer, .NET Core Developer, Azure, Web Developer, Hyderabad">
+  <meta name="author" content="Madhan Sainath Reddy Bommidi">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Madhan Sainath Reddy Bommidi | Full-Stack Developer">
+  <meta property="og:description" content="Full-Stack Developer specializing in Angular, React, .NET Core, and Azure. Building scalable web applications.">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Madhan Sainath Reddy Bommidi | Full-Stack Developer">
+  <meta name="twitter:description" content="Full-Stack Developer specializing in Angular, React, .NET Core, and Azure.">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/gif" href="favicon.gif">
+  <link rel="apple-touch-icon" href="favicon.gif">
+  
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0a0a0b">
+  <meta name="msapplication-TileColor" content="#0a0a0b">
+  
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <app-root></app-root>
